bug fix - body overflow

--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -1,3 +1,6 @@
+body{
+  overflow: initial;
+}
 h1{
   max-width: 80%;
 }
